fix issue for dynamic that happened when putting nav in css to increase readability

--- a/a2/css/style.css
+++ b/a2/css/style.css
@@ -233,7 +233,7 @@ header nav .icon:hover .login-account{
         display:block;
     }
     
-    header .btn-container p{
+    header nav .btn-container p{
         display:none;
     }
     
